Don't allow plugin to set NPPVpluginWindowBool on OS X. b=466495 r=josh sr=roc